Sun Jan 25 16:37:18 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/Test_Options.h:
        * cuts/utils/testing/Testing_App.cpp:

          . Added support for shutdown timeout to prevent the test
            from running indefinitely.

        * cuts/utils/testing/svcs/logging/Test_Logging_Service.cpp:

          . Temporarily disable server shutdown until we can find out
            where the race conditions are.

Sun Jan 25 15:44:25 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/descriptors/hypothesis1/run-test-all.sh:

          . Removed the sleep time from the script.

Sun Jan 25 15:39:15 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/descriptors/hypothesis1/run-test-all.sh:
        * examples/PICML/AntiSPAM/descriptors/hypothesis1/run-test.sh:

          . Improved the scripts for running all the tests.

Sun Jan 25 15:35:49 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/logging/client/TestLoggerClient_i.cpp:
        * cuts/utils/logging/client/TestLogger_i.cpp:
        * cuts/utils/logging/server/TestLoggerServer_i.cpp:

          . Simplied the complexity of the code.

          . Added more exception handling, and debug messages.

        * cuts/workers/Test_Logger/TestLogger.xme:
        * cuts/workers/Test_Logger/Test_Logger.h:
        * cuts/workers/Test_Logger/Test_Logger.cpp:
        * cuts/workers/Test_Logger/Test_Logger_i.h:
        * cuts/workers/Test_Logger/Test_Logger_i.cpp:

          . Implemented a disconnect () method on the test logger worker.

          . Added more exception handling to prevent unknown exceptions
            from reaching the emulation layer.

        * examples/PICML/AntiSPAM/AntiSPAM.xme:
        * examples/PICML/AntiSPAM/CPUBoundImpl_exec.h:
        * examples/PICML/AntiSPAM/CPUBoundImpl_exec.cpp:

          . Force the logger to disconnect when the component is